# td3-jax

./: .gitignore  README.md  TD3.py  justfile  main.py  plot.py  pyproject.toml  utils.py
scripts/: train.py
src/fasttd3/: __init__.py  td3.py  utils.py
tests/: __init__.py  test_td3.py
